TerceraEntrega/y.output
Terminals unused in grammar

   IN
   LONG


Gramática

    0 $accept: programa $end

    1 programa: declaracion bloque

    2 bloque: sentencia
    3       | bloque sentencia

    4 sentencia: asignacion
    5          | ciclo
    6          | seleccion
    7          | salida
    8          | entrada

    9 declaracion: DECVAR listaDeclaraciones ENDDEC

   10 listaDeclaraciones: listavar DP tipodato
   11                   | listaDeclaraciones listavar DP tipodato

   12 listavar: ID
   13         | listavar COMA ID

   14 tipodato: INTEGER
   15         | FLOAT
   16         | STRING

   17 $@1: /* vacío */

   18 seleccion: condicion_if bloque ELSE $@1 bloque ENDIF
   19          | condicion_if bloque ENDIF

   20 condicion_if: IF condicion THEN

   21 $@2: /* vacío */

   22 $@3: /* vacío */

   23 $@4: /* vacío */

   24 ciclo: WHILE $@2 condicion DO $@3 bloque $@4 ENDWHILE

   25 entrada: READ ID

   26 salida: WRITE CTE_STRING

   27 asignacion: ID OP_ASIG expresion
   28           | ID OP_ASIG CTE_STRING

   29 condicion: comparacion
   30          | condicion AND comparacion

   31 $@5: /* vacío */

   32 condicion: PAR_A NOT $@5 comparacion PAR_C

   33 $@6: /* vacío */

   34 $@7: /* vacío */

   35 condicion: condicion $@6 OR $@7 comparacion
   36          | between
   37          | inlist

   38 comparacion: expresion OP_MAY expresion
   39            | expresion OP_MEN expresion
   40            | expresion OP_MENIGU expresion
   41            | expresion OP_MAYIGU expresion
   42            | expresion OP_IGUAL expresion
   43            | expresion OP_DIF expresion

   44 expresion: expresion OP_SUMA termino
   45          | expresion OP_RESTA termino
   46          | termino
   47          | OP_RESTA expresion

   48 termino: termino OP_MULT factor
   49        | termino OP_DIV factor
   50        | factor

   51 factor: PAR_A expresion PAR_C
   52       | CTE_FLOAT
   53       | ID
   54       | CTE_INTEGER

   55 $@8: /* vacío */

   56 $@9: /* vacío */

   57 $@10: /* vacío */

   58 between: BETWEEN PAR_A ID $@8 COMA COR_A expresion PYC $@9 expresion COR_C $@10 PAR_C

   59 lista_expr: expresion
   60           | lista_expr PYC expresion

   61 $@11: /* vacío */

   62 inlist: INLIST PAR_A ID $@11 PYC COR_A lista_expr COR_C PAR_C


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
OP_ASIG (258) 27 28
OP_RESTA (259) 45 47
OP_SUMA (260) 44
OP_DIV (261) 49
OP_MULT (262) 48
MENOS_UNARIO (263)
OP_MAY (264) 38
OP_MAYIGU (265) 41
OP_MEN (266) 39
OP_MENIGU (267) 40
OP_IGUAL (268) 42
OP_DIF (269) 43
WHILE (270) 24
IF (271) 20
INTEGER (272) 14
FLOAT (273) 15
STRING (274) 16
ELSE (275) 18
THEN (276) 20
DECVAR (277) 9
ENDDEC (278) 9
IN (279)
AND (280) 30
OR (281) 35
NOT (282) 32
LONG (283)
BETWEEN (284) 58
INLIST (285) 62
WRITE (286) 26
COMA (287) 13 58
ENDIF (288) 18 19
ENDWHILE (289) 24
DO (290) 24
READ (291) 25
PAR_A (292) 32 51 58 62
PAR_C (293) 32 51 58 62
COR_A (294) 58 62
COR_C (295) 58 62
PYC (296) 58 60 62
DP (297) 10 11
ID (298) 12 13 25 27 28 53 58 62
CTE_INTEGER (299) 54
CTE_FLOAT (300) 52
CTE_STRING (301) 26 28


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
programa (48)
    en la izquierda: 1, en la derecha: 0
bloque (49)
    en la izquierda: 2 3, en la derecha: 1 3 18 19 24
sentencia (50)
    en la izquierda: 4 5 6 7 8, en la derecha: 2 3
declaracion (51)
    en la izquierda: 9, en la derecha: 1
listaDeclaraciones (52)
    en la izquierda: 10 11, en la derecha: 9 11
listavar (53)
    en la izquierda: 12 13, en la derecha: 10 11 13
tipodato (54)
    en la izquierda: 14 15 16, en la derecha: 10 11
seleccion (55)
    en la izquierda: 18 19, en la derecha: 6
$@1 (56)
    en la izquierda: 17, en la derecha: 18
condicion_if (57)
    en la izquierda: 20, en la derecha: 18 19
ciclo (58)
    en la izquierda: 24, en la derecha: 5
$@2 (59)
    en la izquierda: 21, en la derecha: 24
$@3 (60)
    en la izquierda: 22, en la derecha: 24
$@4 (61)
    en la izquierda: 23, en la derecha: 24
entrada (62)
    en la izquierda: 25, en la derecha: 8
salida (63)
    en la izquierda: 26, en la derecha: 7
asignacion (64)
    en la izquierda: 27 28, en la derecha: 4
condicion (65)
    en la izquierda: 29 30 32 35 36 37, en la derecha: 20 24 30 35
$@5 (66)
    en la izquierda: 31, en la derecha: 32
$@6 (67)
    en la izquierda: 33, en la derecha: 35
$@7 (68)
    en la izquierda: 34, en la derecha: 35
comparacion (69)
    en la izquierda: 38 39 40 41 42 43, en la derecha: 29 30 32 35
expresion (70)
    en la izquierda: 44 45 46 47, en la derecha: 27 38 39 40 41 42
    43 44 45 47 51 58 59 60
termino (71)
    en la izquierda: 48 49 50, en la derecha: 44 45 46 48 49
factor (72)
    en la izquierda: 51 52 53 54, en la derecha: 48 49 50
between (73)
    en la izquierda: 58, en la derecha: 36
$@8 (74)
    en la izquierda: 55, en la derecha: 58
$@9 (75)
    en la izquierda: 56, en la derecha: 58
$@10 (76)
    en la izquierda: 57, en la derecha: 58
lista_expr (77)
    en la izquierda: 59 60, en la derecha: 60 62
inlist (78)
    en la izquierda: 62, en la derecha: 37
$@11 (79)
    en la izquierda: 61, en la derecha: 62


estado 0

    0 $accept: . programa $end

    DECVAR  desplazar e ir al estado 1

    programa     ir al estado 2
    declaracion  ir al estado 3


estado 1

    9 declaracion: DECVAR . listaDeclaraciones ENDDEC

    ID  desplazar e ir al estado 4

    listaDeclaraciones  ir al estado 5
    listavar            ir al estado 6


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 7


estado 3

    1 programa: declaracion . bloque

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    bloque        ir al estado 13
    sentencia     ir al estado 14
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 4

   12 listavar: ID .

    $default  reduce usando la regla 12 (listavar)


estado 5

    9 declaracion: DECVAR listaDeclaraciones . ENDDEC
   11 listaDeclaraciones: listaDeclaraciones . listavar DP tipodato

    ENDDEC  desplazar e ir al estado 21
    ID      desplazar e ir al estado 4

    listavar  ir al estado 22


estado 6

   10 listaDeclaraciones: listavar . DP tipodato
   13 listavar: listavar . COMA ID

    COMA  desplazar e ir al estado 23
    DP    desplazar e ir al estado 24


estado 7

    0 $accept: programa $end .

    $default  aceptar


estado 8

   24 ciclo: WHILE . $@2 condicion DO $@3 bloque $@4 ENDWHILE

    $default  reduce usando la regla 21 ($@2)

    $@2  ir al estado 25


estado 9

   20 condicion_if: IF . condicion THEN

    OP_RESTA     desplazar e ir al estado 26
    BETWEEN      desplazar e ir al estado 27
    INLIST       desplazar e ir al estado 28
    PAR_A        desplazar e ir al estado 29
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    condicion    ir al estado 33
    comparacion  ir al estado 34
    expresion    ir al estado 35
    termino      ir al estado 36
    factor       ir al estado 37
    between      ir al estado 38
    inlist       ir al estado 39


estado 10

   26 salida: WRITE . CTE_STRING

    CTE_STRING  desplazar e ir al estado 40


estado 11

   25 entrada: READ . ID

    ID  desplazar e ir al estado 41


estado 12

   27 asignacion: ID . OP_ASIG expresion
   28           | ID . OP_ASIG CTE_STRING

    OP_ASIG  desplazar e ir al estado 42


estado 13

    1 programa: declaracion bloque .
    3 bloque: bloque . sentencia

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    $default  reduce usando la regla 1 (programa)

    sentencia     ir al estado 43
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 14

    2 bloque: sentencia .

    $default  reduce usando la regla 2 (bloque)


estado 15

    6 sentencia: seleccion .

    $default  reduce usando la regla 6 (sentencia)


estado 16

   18 seleccion: condicion_if . bloque ELSE $@1 bloque ENDIF
   19          | condicion_if . bloque ENDIF

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    bloque        ir al estado 44
    sentencia     ir al estado 14
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 17

    5 sentencia: ciclo .

    $default  reduce usando la regla 5 (sentencia)


estado 18

    8 sentencia: entrada .

    $default  reduce usando la regla 8 (sentencia)


estado 19

    7 sentencia: salida .

    $default  reduce usando la regla 7 (sentencia)


estado 20

    4 sentencia: asignacion .

    $default  reduce usando la regla 4 (sentencia)


estado 21

    9 declaracion: DECVAR listaDeclaraciones ENDDEC .

    $default  reduce usando la regla 9 (declaracion)


estado 22

   11 listaDeclaraciones: listaDeclaraciones listavar . DP tipodato
   13 listavar: listavar . COMA ID

    COMA  desplazar e ir al estado 23
    DP    desplazar e ir al estado 45


estado 23

   13 listavar: listavar COMA . ID

    ID  desplazar e ir al estado 46


estado 24

   10 listaDeclaraciones: listavar DP . tipodato

    INTEGER  desplazar e ir al estado 47
    FLOAT    desplazar e ir al estado 48
    STRING   desplazar e ir al estado 49

    tipodato  ir al estado 50


estado 25

   24 ciclo: WHILE $@2 . condicion DO $@3 bloque $@4 ENDWHILE

    OP_RESTA     desplazar e ir al estado 26
    BETWEEN      desplazar e ir al estado 27
    INLIST       desplazar e ir al estado 28
    PAR_A        desplazar e ir al estado 29
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    condicion    ir al estado 51
    comparacion  ir al estado 34
    expresion    ir al estado 35
    termino      ir al estado 36
    factor       ir al estado 37
    between      ir al estado 38
    inlist       ir al estado 39


estado 26

   47 expresion: OP_RESTA . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 53
    termino    ir al estado 36
    factor     ir al estado 37


estado 27

   58 between: BETWEEN . PAR_A ID $@8 COMA COR_A expresion PYC $@9 expresion COR_C $@10 PAR_C

    PAR_A  desplazar e ir al estado 54


estado 28

   62 inlist: INLIST . PAR_A ID $@11 PYC COR_A lista_expr COR_C PAR_C

    PAR_A  desplazar e ir al estado 55


estado 29

   32 condicion: PAR_A . NOT $@5 comparacion PAR_C
   51 factor: PAR_A . expresion PAR_C

    OP_RESTA     desplazar e ir al estado 26
    NOT          desplazar e ir al estado 56
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 57
    termino    ir al estado 36
    factor     ir al estado 37


estado 30

   53 factor: ID .

    $default  reduce usando la regla 53 (factor)


estado 31

   54 factor: CTE_INTEGER .

    $default  reduce usando la regla 54 (factor)


estado 32

   52 factor: CTE_FLOAT .

    $default  reduce usando la regla 52 (factor)


estado 33

   20 condicion_if: IF condicion . THEN
   30 condicion: condicion . AND comparacion
   35          | condicion . $@6 OR $@7 comparacion

    THEN  desplazar e ir al estado 58
    AND   desplazar e ir al estado 59

    $default  reduce usando la regla 33 ($@6)

    $@6  ir al estado 60


estado 34

   29 condicion: comparacion .

    $default  reduce usando la regla 29 (condicion)


estado 35

   38 comparacion: expresion . OP_MAY expresion
   39            | expresion . OP_MEN expresion
   40            | expresion . OP_MENIGU expresion
   41            | expresion . OP_MAYIGU expresion
   42            | expresion . OP_IGUAL expresion
   43            | expresion . OP_DIF expresion
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA   desplazar e ir al estado 61
    OP_SUMA    desplazar e ir al estado 62
    OP_MAY     desplazar e ir al estado 63
    OP_MAYIGU  desplazar e ir al estado 64
    OP_MEN     desplazar e ir al estado 65
    OP_MENIGU  desplazar e ir al estado 66
    OP_IGUAL   desplazar e ir al estado 67
    OP_DIF     desplazar e ir al estado 68


estado 36

   46 expresion: termino .
   48 termino: termino . OP_MULT factor
   49        | termino . OP_DIV factor

    OP_DIV   desplazar e ir al estado 69
    OP_MULT  desplazar e ir al estado 70

    $default  reduce usando la regla 46 (expresion)


estado 37

   50 termino: factor .

    $default  reduce usando la regla 50 (termino)


estado 38

   36 condicion: between .

    $default  reduce usando la regla 36 (condicion)


estado 39

   37 condicion: inlist .

    $default  reduce usando la regla 37 (condicion)


estado 40

   26 salida: WRITE CTE_STRING .

    $default  reduce usando la regla 26 (salida)


estado 41

   25 entrada: READ ID .

    $default  reduce usando la regla 25 (entrada)


estado 42

   27 asignacion: ID OP_ASIG . expresion
   28           | ID OP_ASIG . CTE_STRING

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32
    CTE_STRING   desplazar e ir al estado 71

    expresion  ir al estado 72
    termino    ir al estado 36
    factor     ir al estado 37


estado 43

    3 bloque: bloque sentencia .

    $default  reduce usando la regla 3 (bloque)


estado 44

    3 bloque: bloque . sentencia
   18 seleccion: condicion_if bloque . ELSE $@1 bloque ENDIF
   19          | condicion_if bloque . ENDIF

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    ELSE   desplazar e ir al estado 73
    WRITE  desplazar e ir al estado 10
    ENDIF  desplazar e ir al estado 74
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    sentencia     ir al estado 43
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 45

   11 listaDeclaraciones: listaDeclaraciones listavar DP . tipodato

    INTEGER  desplazar e ir al estado 47
    FLOAT    desplazar e ir al estado 48
    STRING   desplazar e ir al estado 49

    tipodato  ir al estado 75


estado 46

   13 listavar: listavar COMA ID .

    $default  reduce usando la regla 13 (listavar)


estado 47

   14 tipodato: INTEGER .

    $default  reduce usando la regla 14 (tipodato)


estado 48

   15 tipodato: FLOAT .

    $default  reduce usando la regla 15 (tipodato)


estado 49

   16 tipodato: STRING .

    $default  reduce usando la regla 16 (tipodato)


estado 50

   10 listaDeclaraciones: listavar DP tipodato .

    $default  reduce usando la regla 10 (listaDeclaraciones)


estado 51

   24 ciclo: WHILE $@2 condicion . DO $@3 bloque $@4 ENDWHILE
   30 condicion: condicion . AND comparacion
   35          | condicion . $@6 OR $@7 comparacion

    AND  desplazar e ir al estado 59
    DO   desplazar e ir al estado 76

    $default  reduce usando la regla 33 ($@6)

    $@6  ir al estado 60


estado 52

   51 factor: PAR_A . expresion PAR_C

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 57
    termino    ir al estado 36
    factor     ir al estado 37


estado 53

   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino
   47          | OP_RESTA expresion .

    $default  reduce usando la regla 47 (expresion)


estado 54

   58 between: BETWEEN PAR_A . ID $@8 COMA COR_A expresion PYC $@9 expresion COR_C $@10 PAR_C

    ID  desplazar e ir al estado 77


estado 55

   62 inlist: INLIST PAR_A . ID $@11 PYC COR_A lista_expr COR_C PAR_C

    ID  desplazar e ir al estado 78


estado 56

   32 condicion: PAR_A NOT . $@5 comparacion PAR_C

    $default  reduce usando la regla 31 ($@5)

    $@5  ir al estado 79


estado 57

   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino
   51 factor: PAR_A expresion . PAR_C

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62
    PAR_C     desplazar e ir al estado 80


estado 58

   20 condicion_if: IF condicion THEN .

    $default  reduce usando la regla 20 (condicion_if)


estado 59

   30 condicion: condicion AND . comparacion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    comparacion  ir al estado 81
    expresion    ir al estado 35
    termino      ir al estado 36
    factor       ir al estado 37


estado 60

   35 condicion: condicion $@6 . OR $@7 comparacion

    OR  desplazar e ir al estado 82


estado 61

   45 expresion: expresion OP_RESTA . termino

    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    termino  ir al estado 83
    factor   ir al estado 37


estado 62

   44 expresion: expresion OP_SUMA . termino

    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    termino  ir al estado 84
    factor   ir al estado 37


estado 63

   38 comparacion: expresion OP_MAY . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 85
    termino    ir al estado 36
    factor     ir al estado 37


estado 64

   41 comparacion: expresion OP_MAYIGU . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 86
    termino    ir al estado 36
    factor     ir al estado 37


estado 65

   39 comparacion: expresion OP_MEN . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 87
    termino    ir al estado 36
    factor     ir al estado 37


estado 66

   40 comparacion: expresion OP_MENIGU . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 88
    termino    ir al estado 36
    factor     ir al estado 37


estado 67

   42 comparacion: expresion OP_IGUAL . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 89
    termino    ir al estado 36
    factor     ir al estado 37


estado 68

   43 comparacion: expresion OP_DIF . expresion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 90
    termino    ir al estado 36
    factor     ir al estado 37


estado 69

   49 termino: termino OP_DIV . factor

    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    factor  ir al estado 91


estado 70

   48 termino: termino OP_MULT . factor

    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    factor  ir al estado 92


estado 71

   28 asignacion: ID OP_ASIG CTE_STRING .

    $default  reduce usando la regla 28 (asignacion)


estado 72

   27 asignacion: ID OP_ASIG expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 27 (asignacion)


estado 73

   18 seleccion: condicion_if bloque ELSE . $@1 bloque ENDIF

    $default  reduce usando la regla 17 ($@1)

    $@1  ir al estado 93


estado 74

   19 seleccion: condicion_if bloque ENDIF .

    $default  reduce usando la regla 19 (seleccion)


estado 75

   11 listaDeclaraciones: listaDeclaraciones listavar DP tipodato .

    $default  reduce usando la regla 11 (listaDeclaraciones)


estado 76

   24 ciclo: WHILE $@2 condicion DO . $@3 bloque $@4 ENDWHILE

    $default  reduce usando la regla 22 ($@3)

    $@3  ir al estado 94


estado 77

   58 between: BETWEEN PAR_A ID . $@8 COMA COR_A expresion PYC $@9 expresion COR_C $@10 PAR_C

    $default  reduce usando la regla 55 ($@8)

    $@8  ir al estado 95


estado 78

   62 inlist: INLIST PAR_A ID . $@11 PYC COR_A lista_expr COR_C PAR_C

    $default  reduce usando la regla 61 ($@11)

    $@11  ir al estado 96


estado 79

   32 condicion: PAR_A NOT $@5 . comparacion PAR_C

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    comparacion  ir al estado 97
    expresion    ir al estado 35
    termino      ir al estado 36
    factor       ir al estado 37


estado 80

   51 factor: PAR_A expresion PAR_C .

    $default  reduce usando la regla 51 (factor)


estado 81

   30 condicion: condicion AND comparacion .

    $default  reduce usando la regla 30 (condicion)


estado 82

   35 condicion: condicion $@6 OR . $@7 comparacion

    $default  reduce usando la regla 34 ($@7)

    $@7  ir al estado 98


estado 83

   45 expresion: expresion OP_RESTA termino .
   48 termino: termino . OP_MULT factor
   49        | termino . OP_DIV factor

    OP_DIV   desplazar e ir al estado 69
    OP_MULT  desplazar e ir al estado 70

    $default  reduce usando la regla 45 (expresion)


estado 84

   44 expresion: expresion OP_SUMA termino .
   48 termino: termino . OP_MULT factor
   49        | termino . OP_DIV factor

    OP_DIV   desplazar e ir al estado 69
    OP_MULT  desplazar e ir al estado 70

    $default  reduce usando la regla 44 (expresion)


estado 85

   38 comparacion: expresion OP_MAY expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 38 (comparacion)


estado 86

   41 comparacion: expresion OP_MAYIGU expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 41 (comparacion)


estado 87

   39 comparacion: expresion OP_MEN expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 39 (comparacion)


estado 88

   40 comparacion: expresion OP_MENIGU expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 40 (comparacion)


estado 89

   42 comparacion: expresion OP_IGUAL expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 42 (comparacion)


estado 90

   43 comparacion: expresion OP_DIF expresion .
   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 61
    OP_SUMA   desplazar e ir al estado 62

    $default  reduce usando la regla 43 (comparacion)


estado 91

   49 termino: termino OP_DIV factor .

    $default  reduce usando la regla 49 (termino)


estado 92

   48 termino: termino OP_MULT factor .

    $default  reduce usando la regla 48 (termino)


estado 93

   18 seleccion: condicion_if bloque ELSE $@1 . bloque ENDIF

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    bloque        ir al estado 99
    sentencia     ir al estado 14
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 94

   24 ciclo: WHILE $@2 condicion DO $@3 . bloque $@4 ENDWHILE

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    bloque        ir al estado 100
    sentencia     ir al estado 14
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 95

   58 between: BETWEEN PAR_A ID $@8 . COMA COR_A expresion PYC $@9 expresion COR_C $@10 PAR_C

    COMA  desplazar e ir al estado 101


estado 96

   62 inlist: INLIST PAR_A ID $@11 . PYC COR_A lista_expr COR_C PAR_C

    PYC  desplazar e ir al estado 102


estado 97

   32 condicion: PAR_A NOT $@5 comparacion . PAR_C

    PAR_C  desplazar e ir al estado 103


estado 98

   35 condicion: condicion $@6 OR $@7 . comparacion

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    comparacion  ir al estado 104
    expresion    ir al estado 35
    termino      ir al estado 36
    factor       ir al estado 37


estado 99

    3 bloque: bloque . sentencia
   18 seleccion: condicion_if bloque ELSE $@1 bloque . ENDIF

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    ENDIF  desplazar e ir al estado 105
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    sentencia     ir al estado 43
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 100

    3 bloque: bloque . sentencia
   24 ciclo: WHILE $@2 condicion DO $@3 bloque . $@4 ENDWHILE

    WHILE  desplazar e ir al estado 8
    IF     desplazar e ir al estado 9
    WRITE  desplazar e ir al estado 10
    READ   desplazar e ir al estado 11
    ID     desplazar e ir al estado 12

    $default  reduce usando la regla 23 ($@4)

    sentencia     ir al estado 43
    seleccion     ir al estado 15
    condicion_if  ir al estado 16
    ciclo         ir al estado 17
    $@4           ir al estado 106
    entrada       ir al estado 18
    salida        ir al estado 19
    asignacion    ir al estado 20


estado 101

   58 between: BETWEEN PAR_A ID $@8 COMA . COR_A expresion PYC $@9 expresion COR_C $@10 PAR_C

    COR_A  desplazar e ir al estado 107


estado 102

   62 inlist: INLIST PAR_A ID $@11 PYC . COR_A lista_expr COR_C PAR_C

    COR_A  desplazar e ir al estado 108


estado 103

   32 condicion: PAR_A NOT $@5 comparacion PAR_C .

    $default  reduce usando la regla 32 (condicion)


estado 104

   35 condicion: condicion $@6 OR $@7 comparacion .

    $default  reduce usando la regla 35 (condicion)


estado 105

   18 seleccion: condicion_if bloque ELSE $@1 bloque ENDIF .

    $default  reduce usando la regla 18 (seleccion)


estado 106

   24 ciclo: WHILE $@2 condicion DO $@3 bloque $@4 . ENDWHILE

    ENDWHILE  desplazar e ir al estado 109


estado 107

   58 between: BETWEEN PAR_A ID $@8 COMA COR_A . expresion PYC $@9 expresion COR_C $@10 PAR_C

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion  ir al estado 110
    termino    ir al estado 36
    factor     ir al estado 37


estado 108

   62 inlist: INLIST PAR_A ID $@11 PYC COR_A . lista_expr COR_C PAR_C

    OP_RESTA     desplazar e ir al estado 26
    PAR_A        desplazar e ir al estado 52
    ID           desplazar e ir al estado 30
    CTE_INTEGER  desplazar e ir al estado 31
    CTE_FLOAT    desplazar e ir al estado 32

    expresion   ir al estado 111
    termino     ir al estado 36
    factor      ir al estado 37
    lista_expr  ir al estado 112


estado 109

   24 ciclo: WHILE $@2 condicion DO $@3 bloque $@4 ENDWHILE .

    $default  reduce usando la regla 24 (ciclo)


estado 110

   44 expresion: expresion . OP_SUMA termino
   45          | expresion . OP_RESTA termino
   58 between: BETWEEN PAR_A ID $@8 COMA COR_A expresion . PYC $@9 expresion COR_C $@10 PAR_C
